fixes to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@ _________________________________________________________ -->
 
 <footer id="footer">
     <div class="container">
-        <div class="col-md-3 col-sm-6">
+        <div class="col-md-4">
             <h4>About us</h4>
 
             <p>We are dedicated to promoting STEM education to the youth of Franklin County, Maine through the fun of robotics.</p>
@@ -75,15 +75,21 @@ _________________________________________________________ -->
 
         </div>
       -->
+
+
+              <div class="col-md-4">
+                <img src="img/logo-vert-med.png">
+              </div>
+
         <!-- /.col-md-3 -->
 
-        <div class="col-md-3 col-sm-6">
+        <div class="col-md-4">
 
             <h4>Contact</h4>
 
             <p><strong>Franklin County Circuit Hackers</strong>
                 <br>
-                <br>
+                <br>Send an email to <b>info AT circuit-hackers.org</b>
                 <br>
                 <br>Farmington, Franklin County
                 <br>Maine
@@ -97,10 +103,6 @@ _________________________________________________________ -->
         </div>
         <!-- /.col-md-3 -->
 
-
-        <div class="col-md-3 col-sm-6">
-          <img src="img/logo-vert-med.png">
-        </div>
 <!--
         <div class="col-md-3 col-sm-6">
 
