improve contact info

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,7 @@ _________________________________________________________ -->
             <h4>About us</h4>
 
             <p>We are dedicated to promoting STEM education to the youth of Franklin County, Maine through the fun of robotics.</p>
+            <p><a href="meeting-info.html">Click Here For More Info About Attending Our Meetings and Joining Our Club</a></p>
 <!--
             <hr>
 
