--- a/_includes/header.html
+++ b/_includes/header.html
@@ -333,7 +333,7 @@ _________________________________________________________ -->
                 <!--/.nav-collapse -->
 
 
-
+<!--
                 <div class="collapse clearfix" id="search">
 
                     <form class="navbar-form" role="search">
@@ -348,13 +348,13 @@ _________________________________________________________ -->
                     </form>
 
                 </div>
-                <!--/.nav-collapse -->
+                <!--/.nav-collapse --
 
             </div>
 
 
         </div>
-        <!-- /#navbar -->
+        <!-- /#navbar --
 
     </div>
 
@@ -364,7 +364,7 @@ _________________________________________________________ -->
 
 <!-- *** LOGIN MODAL ***
 _________________________________________________________ -->
-
+<!--
 <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="Login" aria-hidden="true">
     <div class="modal-dialog modal-sm">
 
@@ -395,5 +395,5 @@ _________________________________________________________ -->
         </div>
     </div>
 </div>
-
+-->
 <!-- *** LOGIN MODAL END *** -->
