make large logo reactive

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,7 +44,7 @@ _________________________________________________________ -->
 
                     <a class="navbar-brand home" href="index.html">
                         <img src="img/logo.png" alt="Franklin County Circuit Hackers - Science Technology Engineering and Math education through robotics fun." class="hidden-xs hidden-sm">
-                        <img src="img/logo-small.png" alt="Franklin County Circuit Hackers - Science Technology Engineering and Math education through robotics fun." class="visible-xs visible-sm"><span class="sr-only">Universal - go to homepage</span>
+                        <img src="img/logo-small.png" alt="Franklin County Circuit Hackers - Science Technology Engineering and Math education through robotics fun." class="visible-xs visible-sm"><span class="sr-only">homepage</span>
                     </a>
 <!--
                     <div class="navbar-buttons">
